# countdown

./: README.md  advanced_countdown.py  countdown-advanced.py  countdown-gui.py  countdown-terminal.py  pyproject.toml  terminal_countdown.py
src/countdown/: __init__.py  advanced_countdown.py  digital_display.py  main.py
